Spacing fix

--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ h2:hover {
 @media screen and (max-width: 800px) {
   
   #contact {
-    margin-left: 78%;
+    margin-left: 70%;
   }
  
   h1 {
